2001-06-30  Dossy Shiobara  <scott@scottg.net>

	* nsd/conn.c, tests/api/ns_conn.adp: fixed ns_conn outputheaders
    as per bug #433676 submitted by Yon Derek (yond).

2001-05-22  Scott S. Goodwin  <scott@scottg.net>

	* nsd/conn.c: changed Ns_ConnDriverContext in 4.x to return the
	actual conn-specific, module-specific context back, which is how
	it works in 3.x. For some reason this API call was changed to
	always return NULL, but nsopenssl and potentially other comm
	drivers need to get their conn-specific info back.

2001-04-25  Dossy Shiobara  <dossy@panoptic.com>

	* Implemented [ns_localtime ?tz?] as per "[ #418890 ]
	ns_localtime should accept timezone".

2001-03-15  Dossy Shiobara  <dossy@panoptic.com>

	* include/Makefile.win32 win32/*/Makefile: initial attempts at
	Makefiles suitable for NMAKE for building on Win32

	* include/ns.h: define typedef __int64 INT64 for Win32

2001-03-12  Scott S. Goodwin  <scott@scottg.net>

	* nsmain.c: Segmentation fault when using -g <group> flag: line
	294 should read Ns_GetGid(garg) instead of Ns_GetGid(optarg).

2001-03-12 Jim Davidson

	Initial checkin of AOLserver 4.0 (beta), now supporting vitual
	servers and (finally) removing supporting for Tcl 7.6.
	
2001-03-08  Kris Rehberg

	*** AOLserver 3.3 RELEASED ***

2001-03-08 Jim Davidson

	* Added NsTclFinalizeThread() at end of Tcl TLS cleanup to
	finalize Tcl 8.x thread data.  This fix was the last hurdle for
	finalizing nsd8x.

2001-01-31  Kris Rehberg 

	* Makefile (MODULES): nsunix, nsvhr, and nsodbc moved to the
	Module Collection.

2001-01-16  Jim Davidson

	* Cleaned up sloppy use of the nsServer global wherever it's used.

2001-01-04  Kris Rehberg 

	* nsd/tclmisc.c: Ticket 13090.  ns_striphtml crashing-bug in nsd8x
	fixed.

2000-12-14  Kris Rehberg 

	* tcl/http.tcl: Corrected typo _ns_ns_http_readable.

	* nsd/dstring.c (Ns_DStringPrintf): Ticket 12765. Ns_DStringPrintf
	uses vsnprintf instead of vsprintf with specified buffer size.
	Thanks to "??".
